--- a/templates/base.html
+++ b/templates/base.html
@@ -7,16 +7,26 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous">
-    <title>{{title}}</title>
+    <title>{{ title }}</title>
 </head>
 <body>
 <header>
     <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#">Наше приложение</a>
+        <a class="navbar-brand" href="#">Миссия Канализации Марса</a>
+        {% if current_user.is_authenticated %}
+            <a class="btn btn-outline-warning" href="/jobs">Добавить работу</a>
+            <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
+        {% else %}
+            <p>
+                <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
+                <a class="btn btn-success" href="/login">Войти</a>
+            </p>
+        {% endif %}
     </nav>
 </header>
 <!-- Begin page content -->
 <main role="main" class="container">
+    <h4 class="subtitle">И на Марсе будут яблони цвести!</h4>
     {% block content %}
 
     {% endblock %}
